crates/wasm-workers/src/workflow/snapshots/workflow_js_step_execution_until_finished@submit_cancel_full_replay_2.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_0000000000000000000000000A",
        "version": 4,
        "req": {
          "created_at": "1970-01-01T00:00:00.300Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_next",
                "join_set_id": "g:1",
                "run_expires_at": "1970-01-01T00:00:00.300Z",
                "requested_ffqn": null,
                "closing": true
              }
            }
          }
        }
      }
    }
  ]
}
